abandoned unduck, some things now translit insensetive, added timer

--- a/templates/group.html
+++ b/templates/group.html
@@ -1,7 +1,7 @@
 {% extends 'blank.html' %}
 {% block title %}{{group}} group{% endblock %}
 {% block main %}
-{% block message %}{% if redirect %}Openn{% else %}Show{% endif %}ing urls in the <span class='courier'>{{group}}</span> group:{% endblock %}
+{% block message %}{{'Openn' if redirect else 'Show'}}ing urls in the <span class='courier'>{{group}}</span> group:{% endblock %}
 <ul>
     {% for page in pages %}
         <li>
@@ -9,15 +9,13 @@
         </li>
     {% endfor %}
 </ul>
-{% if redirect == false %}
-<button class="btn" onclick="open_all()">Open All</button>
-{% endif %}
+{{'<button class="btn" onclick="open_all()">Open All</button>' if not redirect}}
 <script>
     function open_all(){
         {% for page in pages %}
         window.open("https://{{page.url}}", "_blank");
         {% endfor %}
     }
-    {% if redirect %}window.onload = open_all{% endif %}
+    {{'open_all()' if redirect}}
 </script>
 {% endblock %}
