--- a/templates/blank.html
+++ b/templates/blank.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style>
         .courier{
             font-family: "Courier Prime", monospace;
@@ -23,10 +24,15 @@
         li{
             margin-bottom: 10px;
         }
+        h1{
+            font-size: 3em;
+            margin-bottom: 0.2em;
+        }
+        {% block style %}{% endblock %}
     </style>
 </head>
 <body>
-    <h1>{% block message %}{% endblock %}</h1>
+    <h1 id="title">{% block message %}{% endblock %}</h1>
     {% block main %}{% endblock %}
     <script>
         {% block script %}{% endblock %}
